# temperature-ozone-us-2015-2025

./: .gitignore  AI_ASSISTANCE.md  CHANGELOG.md  CITATION.cff  CODE_LICENSE_DECISION.md  CONTENT_LICENSE_NOTICE.md  FRESH_ENVIRONMENT_VALIDATION.json  IDENTITY_AND_PRIVACY_AUDIT.md  IDENTITY_AND_PRIVACY_FINDINGS.json  LICENSE  PACKAGE_QUALITY_AUDIT.json  PUBLIC_RELEASE_CANDIDATE_MARKER.json  PUBLIC_RELEASE_CHECKSUMS.sha256  PUBLIC_RELEASE_MANIFEST.json  README.md  RELEASE_STATUS.md  REPRODUCIBILITY_SCOPE.md  REPRODUCTION.md  SOURCE_DATA_RETRIEVAL.md  ZENODO_METADATA.md  ZENODO_METADATA_DRAFT.md  pyproject.toml
analysis_scripts/: run_event_2025_quality_bootstrap.py  run_event_2025_quality_real.py  run_family5_descriptive_bootstrap.py  run_family5_real_descriptive.py  run_network_breadth_bootstrap.py  run_network_breadth_point_estimates.py  run_primary_continuous_bootstrap.py  run_primary_continuous_fit.py  run_sensitivity_2020_bootstrap.py  run_sensitivity_2020_point_estimates.py  run_temperature_spline_3df_bootstrap.py  run_temperature_spline_3df_real.py
config/: analysis.yml
docs/: data_dictionary.md  decomposition_estimand.md  epa_2025_completeness.md  methodological_risks.md  source_inventory.md
environment/: fresh-environment-resolved.txt  requirements-analysis.txt  requirements-render.txt
manuscript/: apply_pdf_metadata.py  citation_traceability.csv  manuscript.html  manuscript.md  number_traceability.csv  publication.css  references.bib  render_publication.sh  supplement.html  supplement.md
preregistration/: research_plan.md  statistical_analysis_plan.md
(+113 files in other folders)
