
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "varden-ozone-reproducibility"
version = "1.0.0"
description = "Curated reproducibility source for the Ellis Varden ozone manuscript"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Ellis Varden" }]
license = { file = "LICENSE" }
dynamic = []
dependencies = [
  "duckdb>=1.1,<2",
  "httpx>=0.27,<1",
  "matplotlib>=3.9,<4",
  "numpy>=2.0,<3",
  "pandas>=2.2,<3",
  "patsy>=1.0,<2",
  "pyarrow>=17,<24",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "pikepdf>=10.10,<11",
  "PyYAML>=6.0.2,<7",
  "scipy>=1.14,<2",
  "statsmodels>=0.14,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.hatch.build.targets.wheel]
packages = ["src/varden_ozone"]
